/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2021-04-25 09:38 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/gtk/hownbtn.prg
    ! Small fix (ticket #88)

2021-04-23 16:54 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/winapi/hlenta.prg
  * source/gtk/hlenta.prg
    ! propset added, minor fix.

2021-04-23 15:05 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/winapi/hlenta.prg
  * source/gtk/hlenta.prg
    * header added
  * include/hwgextern.ch
    * HLenta item added.
  * makefile.bc
  * makefile.wc
    ! Typo fixed.
  * utils/tutorial/tutor_eng.xml
    * Small sample of using HLenta added. Will be extended.

2021-04-23 15:05 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  + source/winapi/hlenta.prg
  + source/gtk/hlenta.prg
    + New control added, class HLenta.
  * source/gtk/Makefile.linux
  * source/gtk/Makefile.mingw
  * source/gtk/Makefile.scr
  * hwgui.hbm
  * makedll.bc
  * makefile.bc
  * makefile.gcc
  * makefile.pc
  * Makefile.scr
  * makefile.vc
  * makefile.wc
    * Makefiles updated.

2021-04-23 13:35 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/winapi/drawwidg.prg
    * :nTransparent property added to HBitmap, :Draw() is changed to respect the
      :nTransparent value
  * source/gtk/drawwidg.prg
    * HBitmap():Draw() method added for compatibility with winapi version
  * include/guilib.ch
    * Version number is returned to an old scheme, "dev" added to the number.

2021-04-20 13:00 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/gtk/drawwidg.prg
  * source/winapi/drawwidg.prg
    ! Small fixes.

2021-04-20 11:10 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
  * source/gtk/hownbtn.prg
  * source/winapi/hownbtn.prg
    * SetTimer() method added and some other code to allow the ownerbutton