@@ -25,6 +25,7 @@ EXTERNAL HB_BITAND, HB_BITOR, HB_BITSHIFT
 EXTERNAL HB_ATOKENS
 EXTERNAL ASORT, ASCAN, OS
 EXTERNAL HB_CODEPAGE_RU866, HB_CODEPAGE_RU1251, HB_CODEPAGE_RUKOI8, HB_CODEPAGE_UTF8
+EXTERNAL HB_HKEYS
 
 #ifndef __PLATFORM__WINDOWS
 #define DIR_SEP         '/'
