@@ -52,7 +52,7 @@ EXTERNAL DBFCDX, DBFFPT
 EXTERNAL FOPEN, FCLOSE, FSEEK, FREAD, FWRITE, FERASE
 EXTERNAL HB_BITAND, HB_BITSHIFT
 EXTERNAL ASORT, ASCAN
-EXTERNAL HTRACK
+EXTERNAL HB_HKEYS
 
 #if defined (__HARBOUR__) && ( __HARBOUR__ - 0 >= 0x030000 )
 REQUEST HB_CODEPAGE_UTF8
