@@ -8,6 +8,13 @@
    2002-12-01 15:50 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2021-04-26 10:40 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
+  * utils/tutorial/hwgrun.prg
+  * utils/tutorial/tutor.prg
+    * New EXTERNAL added
+  * utils/tutorial/tutor_eng.xml
+    * A "Lenta" module extended.
+
 2021-04-25 09:38 UTC+0300 Alexander Kresin <alex@belacy.belgorod.su>
   * source/gtk/hownbtn.prg
     ! Small fix (ticket #88)
